--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -426,6 +426,86 @@ $font-weights: (
       }
     }
   }
+
+  .selected-news-list {
+    @apply grid grid-cols-2 gap-4 mb-10 md:grid-cols-3 lg:grid-cols-4;
+
+    &-item {
+      @apply pt-2;
+
+      .selected-news-article {
+        .selected-news-details {
+          h2 {
+            @apply text-dark-surface hover:text-dark-hover dark:text-light dark:hover:text-white text-sizeBig font-bold sm:mb-2 md:text-sizeLg leading-6 max-xs:line-clamp-2;
+          }
+
+          p {
+            @apply hidden;
+          }
+
+          time {
+            @apply text-xs text-dark-hover dark:text-light inline-block;
+          }
+        }
+      }
+
+      &:first-child {
+        @apply row-span-3 col-span-2 md:row-span-2 border-0;
+
+        .selected-news-article {
+          .selected-news-details {
+            h2 {
+              @apply text-sizeXl md:text-sizeXXl leading-8;
+            }
+
+            p {
+              @apply md:block mb-2 leading-8;
+            }
+          }
+        }
+      }
+
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5) {
+        @apply row-span-1 col-span-2 ss:row-span-2 ss:col-span-1 border-t border-light-50 dark:border-dark-divider ss:border-0;
+
+        .selected-news-article {
+          @apply max-xs:flex;
+
+          .selected-news-thumbnail {
+            @apply max-xs:w-1/3;
+          }
+
+          .selected-news-details {
+            @apply max-xs:w-2/3 max-xs:pl-2;
+          }
+        }
+      }
+
+      &:nth-child(2),
+      &:nth-child(3) {
+        @apply md:row-span-1 md:col-span-1;
+      }
+
+      &:nth-child(4),
+      &:nth-child(5) {
+        @apply md:row-span-1 md:col-span-1;
+      }
+    }
+
+    .selected-news-link {
+      &:hover,
+      &:visited {
+        .selected-news-article {
+          h2 {
+            @apply text-dark-hover dark:text-white underline;
+          }
+        }
+      }
+    }
+  }
 }
 
 /*=======================================================
