theme color updating

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -64,6 +64,7 @@ $font-weights: (
 
 #__nuxt-devtools-splash {
   display: none !important;
+  color: rgb(27, 167, 116);
 }
 
 /*=======================================================
