theme color updated based on requirements

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -64,7 +64,7 @@ $font-weights: (
 
 #__nuxt-devtools-splash {
   display: none !important;
-  color: rgb(27, 167, 116);
+  color: hsl(229, 85%, 5%);
 }
 
 /*=======================================================
